[tool.poetry]
name = "promnesia-docker"
version = "0.0.0"
description = ""
authors = ["Keerthan Jaic <jckeerthan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
promnesia = {git = "https://github.com/karlicoss/promnesia.git", rev = "master", extras = ["html", "markdown"]}
#hpi = {git = "https://github.com/karlicoss/hpi.git", extras = ["optional"]}
#rexport = {git = "https://github.com/karlicoss/rexport.git"}
#hypexport = {git = "https://github.com/karlicoss/hypexport.git"}
#ipython = "^8.3.0"
#browserexport = "^0.2.6"
hpi = {git = "https://github.com/karlicoss/hpi.git", rev = "master", extras = ["optional"]}
rexport = {git = "https://github.com/karlicoss/rexport"}
hypexport = {git = "https://github.com/karlicoss/hypexport"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
